syntax = "proto3";

option go_package = "github.com/khusainnov/tag/api/tages/v1;tapi";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service ImageService {
  rpc UploadImage(UploadImageRequest) returns (google.protobuf.Empty) {};
  rpc ListImages(google.protobuf.Empty) returns (ListImagesResponse) {};
  rpc DownloadImage(DownloadImageRequest) returns (DownloadImageResponse) {};
}

message UploadImageRequest {
  bytes image = 1;
}

message ListImagesRequest {}

message DownloadImageRequest {
  string id = 1;
}

message Image {
  string name = 1;
  google.protobuf.Timestamp created_date = 2;
  google.protobuf.Timestamp modified_date = 3;
}

message UploadImageResponse {
  Image image = 1;
}

message ListImagesResponse {
  repeated Image images = 1;
}

message DownloadImageResponse {
  bytes image = 1;
}
